[tool.poetry]
name = "pangea-ai-guard-tests"
version = "0.1.0"
description = "Tests for Pangea AI Guard Kong plugin"
authors = ["Pangea Security"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
pytest-timeout = "^2.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 